--- a/ESP32_Client_V0.1/platformio.ini
+++ b/ESP32_Client_V0.1/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
 	alanswx/ESPAsyncWiFiManager@^0.31
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
