--- a/ESP32_Client_V0.1/platformio.ini
+++ b/ESP32_Client_V0.1/platformio.ini
@@ -17,3 +17,6 @@ lib_deps =
 	alanswx/ESPAsyncWiFiManager@^0.31
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
+
+debug_tool = esp-prog
+debug_init_break =tbreak setup
