--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -12,6 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+build_unflags =-std=gnu++11
+build_flags =-std=gnu++17
+
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
 	alanswx/ESPAsyncWiFiManager@^0.31
