--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -17,8 +17,9 @@ build_unflags =-std=gnu++11
 build_flags =-std=gnu++17
 
 lib_deps = 
-	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
-	alanswx/ESPAsyncWiFiManager@^0.31
+;	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
+;	alanswx/ESPAsyncWiFiManager@^0.31
+
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 
