--- a/Chrome_JS_Server_V2.0/my-app/package.json
+++ b/Chrome_JS_Server_V2.0/my-app/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/typography": "^0.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -22,6 +23,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"gh-pages": "^5.0.0",
 		"postcss": "^8.4.26",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
