--- a/Chrome_JS_Server_V2.0/package.json
+++ b/Chrome_JS_Server_V2.0/package.json
@@ -36,5 +36,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@vercel/analytics": "^1.0.1"
+	}
 }
