--- a/Chrome_JS_Server_V2.0/package.json
+++ b/Chrome_JS_Server_V2.0/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/node": "^20.4.5",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -38,6 +39,11 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.0.1"
+		"@vercel/analytics": "^1.0.1",
+		"jazz-midi": "^1.7.9",
+		"jzz": "^1.6.6",
+		"jzz-gui-select": "^1.1.0",
+		"jzz-midi-gear": "^1.3.0",
+		"jzz-midi-smf": "^1.7.6"
 	}
 }
