Pull Esp32 From Air Compressor

--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -12,16 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-
-build_unflags =-std=gnu++11
-build_flags =-std=gnu++17
-
-lib_deps = 
-;	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
-;	alanswx/ESPAsyncWiFiManager@^0.31
-
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-
 debug_tool = esp-prog
-debug_init_break =tbreak setup
+debug_init_break = tbreak setup
+lib_deps = fastled/FastLED@^3.5.0
