--- a/Chrome_JS_Server_V2.0/package.json
+++ b/Chrome_JS_Server_V2.0/package.json
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.0.1",
+		"idb": "^7.1.1",
 		"jazz-midi": "^1.7.9",
 		"jzz": "^1.6.6",
 		"jzz-gui-select": "^1.1.0",
