--- a/ESP32_Client_V1.0/.vscode/settings.json
+++ b/ESP32_Client_V1.0/.vscode/settings.json
@@ -49,6 +49,7 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "iostream": "cpp"
     }
 }
