--- a/Chrome_JS_Server_V2.0/package.json
+++ b/Chrome_JS_Server_V2.0/package.json
@@ -35,7 +35,8 @@
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.6"
+		"vite": "^4.3.6",
+		"vite-plugin-singlefile": "^0.13.5"
 	},
 	"type": "module",
 	"dependencies": {
