--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -19,3 +19,7 @@ monitor_filters = esp32_exception_decoder
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 lib_deps = fastled/FastLED@^3.5.0
+
+check_flags = --enable=all --suppress=unusedFunction
+
+
