--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -18,7 +18,10 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 debug_tool = esp-prog
 debug_init_break = tbreak setup
-lib_deps = fastled/FastLED@^3.5.0
+lib_deps = 
+	fastled/FastLED@^3.5.0
+	4-20ma/ModbusMaster@^2.0.1
+	robtillaart/AD9833@^0.4.0
 
 check_flags = --enable=all --suppress=unusedFunction
 
