Added Program Change Device Reset and added ESP32 Node-MCU

--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -11,6 +11,12 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+
+;NODE MUC ESP32S
+;[env:nodemcu-32s]
+;platform = espressif32
+;board = nodemcu-32s
+
 framework = arduino
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
