--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -8,9 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+;Default ESP32 DEV
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+
+;Espressif ESP32-S3 DEV
+;[env:esp32-s3-devkitc-1]
+;platform = espressif32
+;board = esp32-s3-devkitc-1
+
+;NODE MUC ESP32S
+;[env:nodemcu-32s]
+;platform = espressif32
+;board = nodemcu-32s
+
 framework = arduino
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
@@ -20,6 +32,7 @@ debug_tool = esp-prog
 debug_init_break = tbreak setup
 lib_deps = 
 	fastled/FastLED@^3.5.0
-	robtillaart/AD9833@^0.4.3
 	4-20ma/ModbusMaster@^2.0.1
+	robtillaart/AD9833@^0.4.0
+
 check_flags = --enable=all --suppress=unusedFunction
