--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -8,21 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-;Default ESP32 DEV
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
-
-;Espressif ESP32-S3 DEV
-;[env:esp32-s3-devkitc-1]
-;platform = espressif32
-;board = esp32-s3-devkitc-1
-
-;NODE MUC ESP32S
-;[env:nodemcu-32s]
-;platform = espressif32
-;board = nodemcu-32s
-
 framework = arduino
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
@@ -34,5 +22,5 @@ lib_deps =
 	fastled/FastLED@^3.5.0
 	4-20ma/ModbusMaster@^2.0.1
 	robtillaart/AD9833@^0.4.0
-  
+	;lathoub/AppleMIDI@^3.3.0
 check_flags = --enable=all --suppress=unusedFunction
