--- a/ESP32_Client_V1.0/.vscode/settings.json
+++ b/ESP32_Client_V1.0/.vscode/settings.json
@@ -51,6 +51,11 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "iostream": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "chrono": "cpp",
+        "condition_variable": "cpp",
+        "ratio": "cpp",
+        "mutex": "cpp",
+        "thread": "cpp"
     }
 }
