Added Teensy Support

--- a/ESP32_Client_V1.0/.vscode/settings.json
+++ b/ESP32_Client_V1.0/.vscode/settings.json
@@ -56,6 +56,8 @@
         "condition_variable": "cpp",
         "ratio": "cpp",
         "mutex": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "csignal": "cpp",
+        "set": "cpp"
     }
 }
