Added Teensy Shift Register support

--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -8,13 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:esp32dev]
-; platform = espressif32
-; board = esp32dev
-; framework = arduino
-; build_unflags = -std=gnu++11
-; build_flags = -std=gnu++17
-; monitor_speed = 115200
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17
+monitor_speed = 115200
 
 [env:teensy41]
 platform = teensy
