Esp32 Validated Working

--- a/ESP32_Client_V1.0/platformio.ini
+++ b/ESP32_Client_V1.0/platformio.ini
@@ -16,13 +16,13 @@ build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
 monitor_speed = 115200
 
-[env:teensy41]
-platform = teensy
-board = teensy41
-framework = arduino
-build_unflags = -std=gnu++11
-build_flags = -std=gnu++17
-monitor_speed = 115200
+; [env:teensy41]
+; platform = teensy
+; board = teensy41
+; framework = arduino
+; build_unflags = -std=gnu++11
+; build_flags = -std=gnu++17
+; monitor_speed = 115200
 
 lib_deps = 
 	fastled/FastLED@^3.5.0
