--- a/ESP32_Client_V1.0/.vscode/settings.json
+++ b/ESP32_Client_V1.0/.vscode/settings.json
@@ -58,6 +58,12 @@
         "mutex": "cpp",
         "thread": "cpp",
         "csignal": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp"
     }
 }
