updated to Node 22 / fixed fileDB

--- a/Chrome_JS_Server_V2.0/package.json
+++ b/Chrome_JS_Server_V2.0/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "my-app",
 	"version": "0.0.1",
+	"engines": {
+		"node": ">=22.0.0"
+	},
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
